--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,65 @@
-icewm -- history of user-visible changes.  2019-03-27
+icewm -- history of user-visible changes.  2019-04-23
+
+Release icewm-1.5.4 released 2019-04-23
+---------------------------------------
+
+git shortlog -e -n -w80,6,8 1.5.3...1.5.4
+
+Bert Gijsbers <gijsbers@science.uva.nl> (45):
+      remove stray semicolon
+      avoid clang warnings
+      solve ambiguous[] for #340
+      avoid clang warnings
+      avoid clang warnings
+      avoid clang warnings
+      avoid clang warnings
+      avoid clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      prevent clang warnings
+      add missing _XA_TARGETS
+      prevent clang warnings
+      prevent clang warnings
+      fix compilation for clang
+      fix clang warnings
+      avoid clang warning
+      25 more preferences documented.
+      prefer https
+      d, display. strip trailing whitespace.
+      add const_cast for #341.
+      Working around setjmp clobbering issues with high optimization levels.
+      pngload reference image
+      NanoBlue icons are PNG.
+      debug trace on request_code, not resourceid.
+      drawClippedPixmap create GC on drawable for 32-bit depth, not static.
+      fix sync type to bool.
+      support themes with indirect XPM images, like OnyX.
+      also distribute man/CMakeLists.txt.
+      Add 8 "get"-commands to icesh to complement to existing "set"-commands.
+      Clang has no variable tracking.
+      Keep icewm.html for distribution.
+      fix loop type
+      avoid dangling pointer
+      update icewmhint
+      more logging detail
+      explain env. update locations
+      update po files
+      Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+        icewm-1-4-BRANCH
+      Merge branch 'icewm-1-4-BRANCH'
+
 
 Release icewm-1.5.3 released 2019-03-27
 ---------------------------------------
 
 git shortlog -e -n -w80,6,8 1.5.2...1.5.3
 
-Bert Gijsbers <gijsbers@science.uva.nl> (13):
+Bert Gijsbers <gijsbers@science.uva.nl> (15):
       Restore resize behavior to 1.4.2 for #331.
       update po files
       Extend icesh with a dozen new icewm specific commands.
@@ -20,6 +74,8 @@ Bert Gijsbers <gijsbers@science.uva.nl> (13):
       ESD is obsolete
       Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
         icewm-1-4-BRANCH
+      Prepare 1.5.3 release
+      1.5.3
 
 Emily Dong <Emily.Dong@excel-gits.com> (2):
       Translated using Weblate (Chinese (China))
@@ -2417,770 +2473,4 @@ Bert Gijsbers <gijsbers@science.uva.nl> (5):
 
 Aleš Kastner <alkas@volny.cz> (1):
       Translated using Weblate (Czech)
-
-
-Release icewm-1.4.0 released 2017-07-24
----------------------------------------
-
-git shortlog -e -n -w80,6,8 1.3.12...1.4.0
-
-Bert Gijsbers <gijsbers@science.uva.nl> (161):
-      Fix for 'msgstr' not being a valid C format string, unlike 'msgid'.
-      Fix for /proc/stat not being opened with FD_CLOEXEC flag. This would cause
-        IceWM to generate warnings whenever it fork+execs a child program.
-      Fix for properly closing open fd on error.
-      Fix for properly closing open fd on error.
-      Fix for not leaving stdin closed.
-      Fix for properly closing dup-ed socket.
-      Fix for properly closing open fd on error.
-      Fix for properly dup2/close devnull.
-      Fix for preventing lots of spurious warning messages for MappingNotify
-        events.
-      Fix to replace msg with MSG to keep IceWM silent when not debugging.
-      Two strstr calls for "AC" and "BAT" had the parameters reversed: fixed.
-        strcat3 could be changed from 12 lines to 1: fixed.
-      Reading of /proc and /sys files simplified and made more robust.
-        Previously the frequency of only one CPU core was examined. Now all
-        frequencies of the first 8 CPU cores are examined. In the CPU tooltip
-        give the maximum and minimum CPU core frequency. Also give the
-        temperatures with one decimal. Fix temperature formatting bug for C.
-      Merge branch 'icewm-1-3-BRANCH' into tooltip-details
-      Implement the top of the TODO list: add support for --help and --version
-        options to each executable.
-      remove obsolete pragmas (interface + implementation).
-      small changes to make BUILD_TESTS work (except for icebar)
-      precondition simplification
-      tTempBuf is not needed and not desirable
-      precondition simplification
-      mstring cleanup to make it more readable and more easily verifiable
-        correct.
-      much more elaborate test suite for mstring.
-      bug fix for missing sizeof(data_t) in YString::set(...)
-      Assignment operators should return a reference, not a copy.  Prevent
-        calling data() when length() is zero as this may access a NULL fStr
-        causing a crash.
-      Make mstring::split use indexOf, which is shorter and more correct (avoids
-        dereferencing null strings).
-      Icehelp didn't draw the html list entries. Fixed processing of node::li
-        nodes by calling draw() to draw <LI> entries. There were several
-        mismatches of new/delete/malloc/free: fixed. Freed memory was accessed
-        in handleClose(): fixed. In YIcon::findIcon(int)  newstr was called for
-        a temporary string which was never going to be freed anywhere: fixed by
-        using pstring instead of newstr.
-      Leak fix: objects should be a YObjectArray otherwise clear() will not be
-        called.
-      Leak fix in findThemes: npath was used where dpath was meant. configArg
-        wasn't used.
-      Leak fix in YWMApp::actionPerformed and in meain.
-      leak fix in WindowOptions::setWinOption for op->icon.
-      No slash needed when terminating an 'url' tag (3x).
-      upath::parent and upath::name were not implemented. upath::slash prevents
-        temporaries. cstring::operator const char *() simplifies code. Several
-        fixes to relative()/child(). A few minor new methods and operators.
-        +upath tests.
-      no need for misc.$(OBJEXT) when libice.la is already given.
-      Goodbye SGML here is AsciiDoc. The doc/*.sgml files replaced by
-        doc/icewm.adoc. Autoconf and cmake updated.
-      rename with .md extension
-      markdownify
-      renamed to INSTALL-cmakebuild.md
-      update for cmakebuild and asciidoc.
-      parse the AsciiDoc output.
-      remove the problematic dependency on glob_pattern_p by writing our own
-        internal version.
-      remove non-portable dependency on asprintf.
-      Remove non-portable dependency on asprintf.  Remove stray backslashes.
-        Rewrite while loops as for loops.  Replace calloc+strcpy with strdup.
-      Remove HAVE_ASPRINTF from YInputLine::complete as globit_best no longer
-        uses asprintf.
-      Prevent warnings when compiling with: make CXX="g++ -std=c++98 -pedantic
-        -Wall".
-      +strlcpy, strlcat, read_file, read_fd, tlog.
-      mstring + upath improvements.
-      Properly handle keyboard events by scrollbars.
-      Make icehelp feature complete.
-      add TOC, link to X startup. Remove LibPath (no longer used).
-      remove duplicate references to sources which are also in
-        ${ICE_COMMON_SRCS}.
-      HAVE_ASPRINTF doesn't imply _GNU_SOURCE. Remove both.
-      Make globit.c 7-bit ASCII.
-      include config.h (needed for CMake).
-      add load_text_file, check for EINTR when reading, use O_TEXT in read_file.
-      Cleanup option parsing: be more strict in what is accepted as option
-        value, don't abort parsing on error, but skip the offending line and
-        continue parsing the next option. Remove appendStr (to reduce memory
-        allocations), simplify code. Improve linkage: move all yconfig.cc
-        external code in class YConfig.
-      POSIX-compliancy requires the use of __linux__, instead of linux. linux
-        may not be defined even though __linux__ is. For instance with g++
-        -std=c++98.
-      +4 convenience methods.
-      Stricter parsing of winoptions. One of two loadMenus made obsolete.
-        Rewrote loadMenusProg.
-      stricter parsing of whitespace in winoptions. Fix a delete[]. Fix a leak
-        for icon. Simplify loadWinOptions.
-      Use upath for configuration directories, prevents a leak and simplifies
-        code (no manual memory management).
-      A redesign with cleaner semantics and 3 subclasses for different release
-        of dynamic memory.
-      When parsing "env" for each line add all expansion results. Trim every
-        "env" string. Permit "env" input lines where '=' is surrounded with
-        spaces.
-      test strlcpy with operlap of source/destination.
-      +stat method.
-      Simplify closeFiles and drastically reduce number of fcntl system calls on
-        exec. If execlp fails then print a warning with exe + strerror.
-      add 2 missing destructors.
-      prefer setenv over putenv.
-      Fix for focus on map: only compare fUserTime when it is unequal to -1,
-        otherwise doActivate would always be set to false.
-      Fix for focus on map: only compare fUserTime when it is unequal to -1,
-        otherwise doActivate would always be set to false.
-      merge wmframe.cc fix
-      Add --display option to icewm-session.  Save errno in fail().
-      bool configurationNeeded was never needed, now deleted.
-      Improve error handling in loadMenusProg. Allow waitpid to fail because of
-        a competing SIGCHILD handler.
-      Don't assume execl /bin/sh can never fail in
-        YWindowManager::execAfterFork.
-      Fix int format string errors for calls to warn(...) for long arguments.
-      Consistently use ACOUNT where appropriate.
-      Restore support for const copy operations using an ownership flag.
-        Improve efficiency by avoiding virtual tables. Prevent inadvertent
-        exchange of pointers between different allocation mechanisms
-        (free/delete/[]). Tested OK sofar.
-      Consistently use ACOUNT where appropriate.
-      print_preferences print_options
-      Add 3 options to icewm: "  --configured        Print the compile time
-        configuration.
-" "  --directories       Print the configuration
-        directories.
-" "  --postpreferences   Print preferences after all
-        processing.
-"
-      Silence annoying startup messages about using private configuration files.
-      Update, small changes.
-      If left hand side of upath.relative() is empty then return right hand side
-        unmodified.
-      Prefer static linkage.
-      More accurate countThemes. Old version always subtracted 1, even if
-        directory was non-existent or empty. New version verifies if de->d_name
-        is a directory and if it has a readable "default.theme" file in it.
-      correction: access == 0 means yes it exists.
-      Support menuButton pixmaps in motif. This fixes
-        https://github.com/bbidulock/icewm/issues/31
-      udir.h provides a small but handy class for simplifying code which deals
-        with directories, like themes.
-      Simplify code for directories, like themes, with udir class.
-      Merge.
-      Correction: run "icewmtray" before "startup" script.
-      Move help text into separate method getHelpText().
-      Properly support searching for resources in XDG_CONFIG_HOME. First search
-        in XDG_CONFIG_HOME, only then in other directories. Simplifications and
-        optimizations to YResourcePaths. YPathElement could be removed as it is
-        just a upath. When removing elements in a loop then count downwards to
-        zero to avoid quadratic time.
-      Support referring to a theme without the last component (basename
-        "default.theme"). This requires less typing. Optimization to getArgument
-        to prevents lots of memory allocations when parsing preferences.
-      Fix for getExtension (wasn't used anywhere sofar).
-      Support the usual icewm command line options in icewm-session and
-        propagate their values to child programs when fork+execing. Also support
-        them in icewmtray and icewmbg. The -t option to icewm didn't work
-        properly because it used GetLongArgument instead of GetShortArgument:
-        fixed. Don't scan preferences for a themeName when themeName has already
-        been given on the command line. Allow to override preferences with some
-        other config file. Cleanup of unused code in icewmbg.cc. Memory leak fix
-        in themes.cc when 15+ themes are available and many submenus are created
-        with a strdup which was never freed. Remove the --no-configure
-        commandline option as it wasn't implemented.
-      Update options.
-      --list-themes       Print a list of all available themes.
-      Remove superfluous #include statements.
-      Print directories in the order IceWM searches in them.
-      More man page new content.
-      Add GCC __attribute__ for format string checks. Define it empty for
-        non-gcc.
-      Cleanup code a bit for icetray.cc.
-      Remove superfluous #include statements.
-      Prefer snprintf/strlcpy/strlcat over sprintf/strcpy/strcat in some cases.
-      splitall may return true and an empty string. Detect this and continue.
-      YIcon would test a large number of paths, some of which have no chance for
-        success.  Reduce the number of such tests. Also reduce duplicate path
-        tests. Fully support the .SVG image format when searching for icons.
-      +SVG and icon sizes.
-      Add remove and renameAs. Add defaults to access and mkdir.
-      For --list-themes also allow short -l alias.
-      Always set line buffering mode for stdout.
-      Make sure all YIcon resources are freed on termination.
-      Because we have only Focus and Themes it doesn't make sens to create a
-        whole new Settings submenu in the toplevel menu. Instead of "Settings"
-        just use entries for Focus + Themes.
-      Move functions of wmconfig.cc into class WMConfig (except for addWork and
-        setLook). Rewrite setDefault: properly support XDG config directory, use
-        at most one hash comment sign per config line, be very careful about
-        existence of directories and simplify file I/O code.
-      Also report the name of the theme in warnings about gradients.
-      ycmdline.[ch] is not used in gnome1 and gnome2: removed.
-      Sort the entries in browsing menus alphabetically.
-      Remove superfluous #include statements.
-      Check if no config directory exists and could not be made.
-      Class Argument supports efficient storage of configuration parsing.
-      Use class Argument to efficiently store parsing results. This also prevent
-        memory leaks in the context of parsing errors when character arrays were
-        not deleted before return from parseMenus().
-      Better support theme names which don't have a slash or a .theme
-        extensions.
-      getResourcePaths was called with a null argument instead of "workspace".
-        This results in many more file lookups. Use "workspace" when calling
-        getResourcePaths for a small speedup.
-      Complete redesign which avoids virtual or refcounts, but supports
-        inter-allocation type assingment (free/new/new[]).
-      For every cursor pointer one new call to getResourcePaths would be done,
-        which is inefficient. Only do it once or twice per startup for a small
-        speedup.
-      Make some methods static and private.
-      update URLs.
-      Add 4 new themes: CrystalBlue, Helix, NanoBlue, Natural. Don't use
-        anymore: gtk2, nice, nice2, warp3, warp4, yellowmotif.
-      Add collate to support locale sensitive comparison using strcoll. Fix an
-        obscure bug in mstring::searchAndReplaceAll (unlikely to occur).
-      Add support for sorted directory access (locale sensitive).
-      Use adir to have browse menus sorted. Make file+folder icons not static
-        but local.
-      Make PRECONDITION usable in isolation by compile time define PRECON.
-      Sort menu entries with collate (strcoll).
-      Concentrate nearly all pixmap .xpm loading in one place. More controlled
-        loading of pixmaps, would allow to extend it to PNG and SVG. Remove the
-        CONFIG_LOOK_* preprocessor symbols as they were not usefully implemented
-        and just cluttered. Streamline wmLook and make it print useful info in
-        --postpreferences. Make stderr line buffered.
-      Typo: fix missing 2 in taskbar2Pixres.
-      Remove unused headers.
-      Make all configure --enable/--disable options compile again.
-      Make some tests compile.
-      Document the "env" file.
-      Add wpixres.cc to ICEWM_SRCS.
-      Document the "focus_mode" file.
-      Memory leak fix: don't call newstr on parameters passed to
-        YStringArray::append, because that one already does a newstr on the
-        received parameter.
-      Fix issue #143: remove theme Natural.
-      Improve man page documentation about "icewm-session".
-      icehelp didn't accept standard IceWM options. If no help file was given
-        then use the standard ICEHELPIDX location. This allows to start icehelp
-        from the command line by just typing "icehelp".
-      Manual page: add "icehelp" to the list of IceWM programs.
-      Prevent 3 warnings when compiling with clang++.
-      Document focus mode and the taskbar.
-      Document the QuickSwitch window and all keyboard shortcuts.
-      Fix option parsing for --theme/--config for icewmbg.
-      Document window placement, window layers and workspaces.
-      Document mouse bindings.
-      Document applet details.
-      man intro + semitransparency.
-      Document icewm signals.
-      Enforce 32-bit unsigned comparison of X11 time stamps in updateUserTime.
-        This improves availability of focused windows in issue #37.
-      Update bug report location to Github.
-      Update ChangeLog for 1.4.0 release.
-      Update NEWS for 1.4.0 release.
-      Update README.md for 1.4.0 release.
-      Add missing PACKAGE_BUGREPORT define. Change empty PACKAGE_URL into
-        website URL.
-      Changes to print_configured to make it compile under CMake.
-
-Brian Bidulock <bidulock@openss7.org> (69):
-      missing jpg slipped in
-      correct MANAGER client message for system tray
-      proper XSession .desktop files
-      fix focus issue #73
-      added hebrew translations
-      updated po files
-      attempt fix to issue #75
-      address issue #77 a bit better
-      attempted fix for issue #75
-      fix for issue #72
-      Translated using Weblate (Hebrew)
-      hebrew corrections
-      correct indentation warnings
-      correction to he.po
-      update po files
-      simplify distribution
-      git hates trailing space
-      limit the ChangeLog
-      cannot use gnits until we change version numbering
-      update the readem
-      annother attempt at a comment
-      annother attempt at a comment
-      a little better format
-      more readable text version
-      tweak
-      typo
-      better formatting yet
-      add debug flags
-      add @GartFarlick fd-leak-patch.txt on issue #84
-      make to work with lightdm
-      Merge branch 'patch-4' of https://github.com/berviantoleo/icewm into
-        berviantoleo-patch-4
-      Merge branch 'berviantoleo-patch-4' into icewm-1-3-BRANCH
-      fix #93 with patch from @roms2000
-      fix #94 changing msg to MSG
-      added original of applied patch
-      Revert "Fix missing variable using dennis"
-      fix issue #99
-      fix printf error
-      another attempt at fixing issue #99
-      added dependencies to README
-      address issue #100 for autoconf
-      call it "prerequisites" and move down some
-      update .po files
-      Fix also in README.md.in per #103
-      update po files fix it.po
-      update po files
-      get package to pass distcheck
-      version update
-      mention translations for .desktop files and utilities
-      issue #37 patch by @PetteriAimonen
-      fixed typo: fixes issue #116
-      update po files
-      fix ignored return value warning
-      fix issue #120
-      try to fix issue #37
-      update po files
-      fix make dist automake target
-      update po files
-      correct compile warnings
-      update po files
-      update po files
-      Merge branch 'icewm-1-3-BRANCH' of github.com:bbidulock/icewm into
-        icewm-1-3-BRANCH
-      updated po files
-      Merge branch 'icewm-1-3-BRANCH' of github.com:bbidulock/icewm into
-        icewm-1-3-BRANCH
-      corrections
-      correct again
-      update po files
-      de.po after merge
-      update po files
-
-Brian Bidulock <bidulock@openss7.com> (39):
-      Merge pull request #56 from 150balbes/icewm-1-3-BRANCH
-      Merge pull request #57 from 150balbes/icewm-1-3-BRANCH
-      Merge pull request #59 from mrbrainsample/icewm-1-3-BRANCH
-      Merge pull request #62 from Code7R/ftr_preconfigure_iconPath
-      Merge pull request #65 from Code7R/ftr_dev_shortcut_cmake
-      Merge pull request #63 from bedna-KU/bedna-KU-patch-1
-      Merge pull request #81 from pumaking/icewm-1-3-BRANCH
-      Merge pull request #82 from Vogtinator/icewm-1-3-BRANCH
-      Merge pull request #85 from Code7R/icewm-1-3-BRANCH
-      Merge pull request #64 from Code7R/ftr_fix_tktray_icon
-      Merge pull request #88 from berviantoleo/patch-1
-      Merge pull request #89 from berviantoleo/patch-2
-      Merge pull request #95 from gijsbers/fixes-open
-      Merge pull request #98 from gijsbers/tooltip-details
-      Merge pull request #103 from Reedych/icewm-1-3-BRANCH
-      Merge pull request #104 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #107 from scootergrisen/patch-1
-      Merge pull request #108 from okurz/icewm-1-3-BRANCH
-      Merge pull request #109 from scootergrisen/patch-1
-      Merge pull request #111 from scootergrisen/patch-2
-      Merge pull request #112 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #113 from mrbrainsample/icewm-1-3-BRANCH
-      Merge pull request #114 from gam3/gam3/CPUStatus
-      Merge pull request #117 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #118 from jinn-alt/logouticon
-      Merge pull request #119 from Tetralet/icewm-1-3-BRANCH
-      Merge branch 'icewm-1-3-BRANCH' into icewm-1-3-Greek-translation
-      Merge pull request #121 from nikoss/icewm-1-3-Greek-translation
-      Merge pull request #123 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #124 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #126 from Code7R/bugfix/gcc7_fixes
-      Merge pull request #127 from Tetralet/icewm-1-3-BRANCH
-      Merge pull request #128 from ivan1986/xdg-support
-      Merge pull request #131 from gijsbers/todo_help_version_done
-      Merge pull request #132 from gijsbers/remove_obsolete_pragmas
-      Merge pull request #133 from gijsbers/make_BUILD_TESTS_work
-      Merge pull request #134 from gijsbers/mstring_cleanup
-      Merge pull request #135 from gijsbers/icehelp_fixes
-      Merge pull request #137 from gijsbers/memory_leak_fixes
-
-Tetralet <tetralet@gmail.com> (20):
-      Supports UTF-8 strings in Workspace names.
-      Set the time format to '%T' for some locales when ledclock/colon.xpm is
-        loaded.
-      FIX: The window size had been resized too much times in some rare
-        situation.
-      Applied a multi CPU monitor from Bert Wesarg. Please visit
-        https://sourceforge.net/p/icewm/mailman/icewm-devel/thread/Pine.GSO.4.56.0611131656000.5306%40turing/
-        for more details.
-      Merge pull request #1 from bbidulock/icewm-1-3-BRANCH
-      Fix: CPU Status stop updating after a certain period of time.
-      Load ColorCPUStatusSteal from user themes.
-      Set the time format to '%T' for some locales when TaskBarClockLeds=1 and
-        ledclock/colon.xpm is loaded.
-      Clean "Invalid multibyte string ..." warning for ACPI Temp string.
-      Fix a error when compiling with --enable-debug.
-      Add some xgettext parameters.
-      Merge pull request #2 from bbidulock/icewm-1-3-BRANCH
-      Fix the tray icon for old gtk1 apps. It reverts commit
-        6035a0b87e4342de35c88dfcb5cd7086591b3ed6
-      FIX: New created window may not be activated in some rare situation.
-      FIX: Activated window may not get input actually.
-      Added some xgettext parameters.
-      Set the msgid "Celsius Temperature" to "°C", or it will cause confusion
-        with other msgids.
-      Traditional Chinese (zh_TW) translation update.
-      Fix commit 5fdabfa8e920c4e483267a61873650607a1c85aa
-      Fix: A stupid mistake in scaling formula. Thanks jinn-alt for reporting
-        this bug.
-
-Eduard Bloch <blade@debian.org> (18):
-      Workaround for some IDEs that keep binary outputs in a custom location
-      Ensure proper order of include paths in the cmake build
-      Don't set optimization options if not specified by the user
-      Preconfigure iconPath in popular FOSS environments
-      Little shortcut: set DEBUG define if user started with Debug build type
-      CLI --debug switch for icewmtray
-      Retry fetching of window properties with some delay
-      Added a shortcut for local debug builds with Debian-like configuration
-      Use released pot file and stop rebuilding it on-the-fly
-      Merge remote-tracking branch 'bbidulock/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Added /usr/share/icons/default to icon path
-      New menu category Accessibility to fdomenu
-      Merge remote-tracking branch 'bbidulock/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Don't focus on 'a' when selecting all elements
-      Fix incorrect switch case
-      Fix wrong bitmask around window style enum value
-      Implementing some trivial fixes discovered by GCC7
-      Fixing incorrect check for -Wimplicit-fallthrough
-
-David Medina <medipas@gmail.com> (12):
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-      Translated using Weblate (Catalan)
-
-Luiz Fernando Ranghetti <elchevive68@gmail.com> (10):
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-
-Alessio Adamo <alessio.adamo@gmail.com> (9):
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-      Translated using Weblate (Italian)
-
-openSUSE Weblate <weblate-noreply@opensuse.org> (9):
-      Merge branch 'icewm-1-3-BRANCH' of github.com:bbidulock/icewm into
-        icewm-1-3-BRANCH
-      Add ar to LINGUAS.
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-      Merge remote-tracking branch 'origin/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-
-Ferdinand Galko <galko.ferdinand@gmail.com> (8):
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-      Translated using Weblate (Slovak)
-
-Freek de Kruijf <freek@opensuse.org> (7):
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-
-Oleg Ivanov <Leo-sp150@yandex.ru> (7):
-      add baground and suport MEMO aplet for defaults themes
-      Merge branch 'icewm-1-3-BRANCH' of https://github.com/150balbes/icewm into
-        icewm-1-3-BRANCH
-      del icewm-session, edit src, add icons
-      Changes to be committed: 	modified:   NEWS 	modified:   README.md
-        modified:   VERSION 	modified:   autogen.sh 	modified:   configure.ac
-        	modified:   po/be.po 	modified:   po/bg.po 	modified:
-        po/ca.po 	modified:   po/cs.po 	modified:   po/da.po
-        modified:   po/de.po 	modified:   po/el.po 	modified:   po/en.po
-        modified:   po/es.po 	modified:   po/fi.po 	modified:   po/fr.po
-        modified:   po/hr.po 	modified:   po/hu.po 	modified:   po/id.po
-        modified:   po/it.po 	modified:   po/ja.po 	modified:   po/ko.po
-        modified:   po/lt.po 	modified:   po/lv.po 	modified:   po/mk.po
-        modified:   po/nb.po 	modified:   po/nl.po 	modified:   po/no.po
-        modified:   po/pl.po 	modified:   po/pt_BR.po 	modified:
-        po/ro.po 	modified:   po/ru.po 	modified:   po/sk.po
-        modified:   po/sl.po 	modified:   po/sv.po 	modified:   po/tr.po
-        modified:   po/uk.po 	modified:   po/vi.po 	modified:   po/zh_CN.po
-        modified:   po/zh_TW.po
-      merge
-      add support for applets MEMO in themes Infadel2 icedesert
-      add new default theme and background
-
-Yasuhiko Kamata <belphegor@belbel.or.jp> (7):
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-      Translated using Weblate (Japanese)
-
-mohammad alhargan <malham1@gmail.com> (7):
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-      Translated using Weblate (Arabic)
-
-Arif Budiman <arifpedia@gmail.com> (6):
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-
-Bervianto Leo Pratama <bervianto.leo@gmail.com> (6):
-      Change variable format to same with msgid
-      Fixing format
-      Fix missing variable using dennis
-      Fix end punctuation missing
-      Fix capital and missing charachter
-      Fix different whitespace
-
-Sarah Kriesch <ada.lovelace@gmx.de> (6):
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-
-Andriy Bandura <andriykopanytsia@gmail.com> (5):
-      Translated using Weblate (Ukrainian)
-      Translated using Weblate (Ukrainian)
-      Translated using Weblate (Ukrainian)
-      Translated using Weblate (Ukrainian)
-      Translated using Weblate (Ukrainian)
-
-Dmitriy Khanzhin <jinn@altlinux.org> (5):
-      adapted logouticon patch, thx to YYY at altlinux forum
-      added icon for point 'Restart Xterm' in logout submenu
-      adapted for build lite version
-      added icons
-      po/el.po: fix msgmerge error
-
-Stanislav Brabec <sbrabec@suse.com> (4):
-      Translated using Weblate (Hebrew)
-      Weblate: Add icewm.pot to the git repository
-      Update .gitignore to allow icewm.pot
-      Merge remote-tracking branch 'weblate/icewm-1-3-BRANCH' into
-        icewm-1-3-BRANCH
-
-jc sl <trcs@gmx.com> (4):
-      Translated using Weblate (Spanish)
-      Translated using Weblate (Spanish)
-      Translated using Weblate (Spanish)
-      Translated using Weblate (Spanish)
-
-nikoss <nikoss@users.noreply.github.com> (4):
-      Add files via upload
-      more translated strings
-      99% finished
-      upload of Greek translation
-
-scootergrisen <scootergrisen@gmail.com> (4):
-      Update da.po
-      Change Icewm to IceWM in all Comment's
-      Add [da] translations
-      Translated using Weblate (Danish)
-
-Benoît Monin <benoit.monin@gmx.fr> (3):
-      Translated using Weblate (French)
-      Translated using Weblate (French)
-      Translated using Weblate (French)
-
-Efstathios Iosifidis <eiosifidis@gmail.com> (3):
-      Translated using Weblate (Greek)
-      Translated using Weblate (Greek)
-      Translated using Weblate (Greek)
-
-Panagiotis Mantzios <pmantzios@hotmail.com> (3):
-      Translated using Weblate (Greek)
-      Translated using Weblate (Greek)
-      Translated using Weblate (Greek)
-
-Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com> (3):
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-      Translated using Weblate (Portuguese (Brazil))
-
-Alex Spitzer <aes368@cornell.edu> (2):
-      Add ACPI Temperature display inside the CPU bar
-      Control ACPI Temperature in-graph display using a configuration variable
-
-Enol P <enolp@softastur.org> (2):
-      Translated using Weblate (Asturian)
-      Translated using Weblate (Asturian)
-
-Ettore Atalan <atalanttore@googlemail.com> (2):
-      Translated using Weblate (German)
-      Translated using Weblate (German)
-
-Jeff Woods <klaatu@fnordco.com> (2):
-      Fix preferences install for out-of-tree CMake builds
-      Revert "Set the time format to '%T' for some locales when
-        ledclock/colon.xpm is loaded."
-
-Joakim Ganse <joakim.ganse@b-iq.se> (2):
-      Translated using Weblate (Swedish)
-      Translated using Weblate (Swedish)
-
-Kamil Stańczyk <suszaraa@gmail.com> (2):
-      Translated using Weblate (Polish)
-      Translated using Weblate (Polish)
-
-Karl Ove Hufthammer <karl@huftis.org> (2):
-      Added translation using Weblate (Norwegian Nynorsk)
-      Translated using Weblate (Norwegian Nynorsk)
-
-Kukuh Syafaat <syafaatkukuh@gmail.com> (2):
-      Translated using Weblate (Indonesian)
-      Translated using Weblate (Indonesian)
-
-Mario <kdesi@kdesi.sk> (2):
-      Comment: Show logout submenu to Show logout menu
-      fix typo
-
-Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com> (2):
-      Translated using Weblate (Lithuanian)
-      Translated using Weblate (Lithuanian)
-
-Nathan Follens <nthn@unseen.is> (2):
-      Translated using Weblate (Dutch)
-      Translated using Weblate (Dutch)
-
-Reedych <linux.user2003@gmail.com> (2):
-      Translated using Weblate (Esperanto)
-      Translated using Weblate (Esperanto)
-
-Shyukri Shyukriev <shshyukriev@suse.com> (2):
-      Translated using Weblate (Bulgarian)
-      Translated using Weblate (Bulgarian)
-
-Дмитрий Ханжин <dmitriy.khanzhin@gmail.com> (2):
-      Translated using Weblate (Russian)
-      Translated using Weblate (Russian)
-
-150balbes <olepp@yandex.ru> (1):
-      Merge pull request #1 from bbidulock/icewm-1-3-BRANCH
-
-Bernhard Wiedemann <bwiedemann@suse.com> (1):
-      Translated using Weblate (German)
-
-Code7R <Code7R@users.noreply.github.com> (1):
-      Merge pull request #125 from jinn-alt/l10n_fix
-
-Dingzhong Chen <wsxy162@gmail.com> (1):
-      Translated using Weblate (Chinese (China))
-
-Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com> (1):
-      Translated using Weblate (Russian)
-
-Fabian Vogt <fvogt@suse.com> (1):
-      Start shutdown and reboot commands in background
-
-Frederic Crozat <fcrozat@suse.com> (1):
-      remove icewm.desktop, it isn't a real xsession file
-
-G. Allen Morris III <gam3@gam3.net> (1):
-      add YSMListener *smActionListener to CPUStatus etc to remove segmentation
-        fault
-
-Guillaume GARDET <guillaume.gardet@opensuse.org> (1):
-      Translated using Weblate (French)
-
-Hoàng Phạm <pnhoang96@gmail.com> (1):
-      Translated using Weblate (Vietnamese)
-
-Ivan Borzenkov <ivan.borzenkov@gmail.com> (1):
-      Add support XDG_CONFIG_HOME directory
-
-Jonas Svensson <jonas@ekhorva.se> (1):
-      Translated using Weblate (Swedish)
-
-Marguerite Su <i@marguerite.su> (1):
-      Translated using Weblate (Chinese (China))
-
-Oliver Kurz <okurz@suse.de> (1):
-      Use a more recent default for mail app
-
-Reedych <reedych@reedych.pw> (1):
-      Fix l10n.opensuse.org url
-
-Tomáš Chvátal <tomas.chvatal@gmail.com> (1):
-      Merge pull request #69 from fcrozat/icewm-1-3-BRANCH
-
-Vojtech Zeisek <Vojtech.Zeisek@opensuse.org> (1):
-      Translated using Weblate (Czech)
-
-Weblate Admin <weblate-admin@opensuse.org> (1):
-      Translated using Weblate (Arabic)
-
-Wnereiz Z <wnereiz@eienteiland.org> (1):
-      Translated using Weblate (Chinese (China))
-
-Yunseok Choi <xein@naver.com> (1):
-      Translated using Weblate (Korean)
-
-alexandros Vennos <alexandros.venn@gmail.com> (1):
-      Translated using Weblate (Greek)
-
-gijsbers <gijsbers@users.noreply.github.com> (1):
-      Merge pull request #141 from bedna-KU/icewm-1-3-BRANCH
-
-hayyan rostami <hayyan71@yahoo.com> (1):
-      Translated using Weblate (Persian)
 
